--- a/app/globals.css
+++ b/app/globals.css
@@ -23,7 +23,7 @@ body {
     margin-inline: auto;
 }
 .container-fluid {
-    width: min(90%, 1200px);
+    width: min(90%, 1330px);
     margin-inline: auto;
 }
 
@@ -47,6 +47,21 @@ body {
         &:not(&:nth-child(2)) {
             @apply text-center;
         }
+    }
+    .custom-frame::before {
+        @apply content-[''] absolute top-0 left-0 aspect-square w-20 border-l-4 border-t-4 border-black translate-x-4 translate-y-4 rounded-tl-md transition-all duration-300 delay-100 -z-1;
+    }
+    .custom-frame::after {
+        @apply content-[''] absolute bottom-0 right-0 aspect-square w-20 border-r-4 border-b-4 border-black -translate-x-4 -translate-y-4 rounded-br-md transition-all duration-300 delay-100 -z-1;
+    }
+    .custom-frame:hover::before {
+        @apply -translate-x-4 -translate-y-4;
+    }
+    .custom-frame:hover::after {
+        @apply translate-x-4 translate-y-4;
+    }
+    .navigation-item-list a {
+        @apply inline-block px-6 py-3 text-sm;
     }
 }
 @layer utilities {
